Initiate migration to java 17